Book Your Pandit Android and IOS App Added

--- a/android-apps.html
+++ b/android-apps.html
@@ -240,7 +240,8 @@
           avatar: "KF",
           title: "Kabs FitFactory",
           badge: "Shopify APIs",
-          details: "KABS FitFactory mobile application is the easiest way to shop for all your nutritional supplements needs. From protein supplements, sports nutrition products, bodybuilding supplements, health and wellness products as well as exclusive clothing lines.",
+          details:
+            "KABS FitFactory mobile application is the easiest way to shop for all your nutritional supplements needs. From protein supplements, sports nutrition products, bodybuilding supplements, health and wellness products as well as exclusive clothing lines.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Fitness / Shopping" },
@@ -301,7 +302,8 @@
           avatar: "JD",
           title: "Kirar Dhakad Jeevansathi",
           badge: "Flutter",
-          details: "Hearing the sufferings of a common family member, the Kirar Dhakad Jeevan Saathi Group was formed on 23-11-2019, the rules were made, then gradually the bio-data of the society brothers started getting, and with time, changes had to be made in the bio-data and the rules and regulations.",
+          details:
+            "Hearing the sufferings of a common family member, the Kirar Dhakad Jeevan Saathi Group was formed on 23-11-2019, the rules were made, then gradually the bio-data of the society brothers started getting, and with time, changes had to be made in the bio-data and the rules and regulations.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Matrimony" },
@@ -321,7 +323,8 @@
           avatar: "KI",
           title: "Kast IPL",
           badge: "Flutter",
-          details: "KASTIPL same day delivery service believes the importance of time management is extremely important for any business or individual. KASTIPL is the biggest shopping destination for online shopping lovers. You will experience fast easy and quick e-commerce shopping here.",
+          details:
+            "KASTIPL same day delivery service believes the importance of time management is extremely important for any business or individual. KASTIPL is the biggest shopping destination for online shopping lovers. You will experience fast easy and quick e-commerce shopping here.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Shopping / Ecommerce" },
@@ -341,7 +344,8 @@
           avatar: "ZG",
           title: "Zever Galaxy",
           badge: "Flutter",
-          details: "Zevar Galaxy is your go-to destination for jewelry fashion. Browse and buy stunning pieces with ease. Zevar Galaxy is an app that showcases jewelry fashion, allowing users to browse and purchase exquisite pieces.",
+          details:
+            "Zevar Galaxy is your go-to destination for jewelry fashion. Browse and buy stunning pieces with ease. Zevar Galaxy is an app that showcases jewelry fashion, allowing users to browse and purchase exquisite pieces.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Jewellery / Ecommerce" },
@@ -361,7 +365,8 @@
           avatar: "SB",
           title: "SevBazaar",
           badge: "Flutter",
-          details: "India's Largest Sev Namkeen Bazaar Don't miss your favorite shop's Sev & Namkeen anymore!! This App will help you order any type of Sev & Namkeen across India.",
+          details:
+            "India's Largest Sev Namkeen Bazaar Don't miss your favorite shop's Sev & Namkeen anymore!! This App will help you order any type of Sev & Namkeen across India.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Food / Marketplace" },
@@ -381,7 +386,8 @@
           avatar: "RT",
           title: "Ranka Tent",
           badge: "Flutter",
-          details: "Ranka Tent App will help you to find all the the wedding, events decorative items .like artical, ceiling, parde, canopy, mandap, chair covers, kanthe, table, table freel, steel chair & sofa, maharaja chair, wedding gate, stage, doli, passage. You can do direct inquiry of any product and also you can give feedback. ",
+          details:
+            "Ranka Tent App will help you to find all the the wedding, events decorative items .like artical, ceiling, parde, canopy, mandap, chair covers, kanthe, table, table freel, steel chair & sofa, maharaja chair, wedding gate, stage, doli, passage. You can do direct inquiry of any product and also you can give feedback. ",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Events / Shopping" },
@@ -401,7 +407,8 @@
           avatar: "LM",
           title: "Leave Management",
           badge: "Flutter",
-          details: "Allow employees to apply for leave through a user-friendly interface. Effectively manage employee leave requests, including approvals and rejections, ensuring smooth workflow and adherence to company policies. Keep comprehensive records of employee leave, including types of leave taken, duration, and reasons, to facilitate accurate tracking and reporting for HR and payroll purposes.",
+          details:
+            "Allow employees to apply for leave through a user-friendly interface. Effectively manage employee leave requests, including approvals and rejections, ensuring smooth workflow and adherence to company policies. Keep comprehensive records of employee leave, including types of leave taken, duration, and reasons, to facilitate accurate tracking and reporting for HR and payroll purposes.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Business / HR" },
@@ -421,7 +428,8 @@
           avatar: "BM",
           title: "Bharat Mapping",
           badge: "Flutter",
-          details: "Bharat Mapping app aimed to keep the track of Sangh Kshetras and Karyakartas across the country, as every year the number of Sangh Kshetras, Mandals, Shakhas, and Karyakartas increases.",
+          details:
+            "Bharat Mapping app aimed to keep the track of Sangh Kshetras and Karyakartas across the country, as every year the number of Sangh Kshetras, Mandals, Shakhas, and Karyakartas increases.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Mapping / Community" },
@@ -441,7 +449,8 @@
           avatar: "SD",
           title: "Sewadata",
           badge: "Flutter",
-          details: "A skilled person has to find the work, while a common man has to find the right person for the smaller tasks. This innovative experiment of Seva Bharati Malwa province can help bridge this gap.",
+          details:
+            "A skilled person has to find the work, while a common man has to find the right person for the smaller tasks. This innovative experiment of Seva Bharati Malwa province can help bridge this gap.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Services" },
@@ -461,7 +470,8 @@
           avatar: "UC",
           title: "Unit Converter",
           badge: "Flutter",
-          details: "This fantastic UNIT CONVERTER APP would be a great addition to your smartphone. Embedded with 15+ tools, this app has been particularly designed and built by specialists to make your life easier.",
+          details:
+            "This fantastic UNIT CONVERTER APP would be a great addition to your smartphone. Embedded with 15+ tools, this app has been particularly designed and built by specialists to make your life easier.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Tools" },
@@ -481,7 +491,8 @@
           avatar: "SD",
           title: "Sewadisha",
           badge: "Flutter",
-          details: "Large numbers of Seva Karyas are being run throughout the country through the inspiration of Rashtriya Swayamsevak Sangh. The number of Seva Karayas and their diversity is also increasing every year....",
+          details:
+            "Large numbers of Seva Karyas are being run throughout the country through the inspiration of Rashtriya Swayamsevak Sangh. The number of Seva Karayas and their diversity is also increasing every year....",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Community" },
@@ -501,7 +512,8 @@
           avatar: "MF",
           title: "Motivfit Fitness",
           badge: "Flutter",
-          details: "Motivfit app is a simple to use training app with social media features.Motivfit app is a simple to use training app with social media features.Our aim is to create a community of avid gym goers, strength and hypertrophy trainers, as well as general fitness enthusiasts that motivate each other to become the best version of ourselves.",
+          details:
+            "Motivfit app is a simple to use training app with social media features.Motivfit app is a simple to use training app with social media features.Our aim is to create a community of avid gym goers, strength and hypertrophy trainers, as well as general fitness enthusiasts that motivate each other to become the best version of ourselves.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Fitness / Social" },
@@ -521,7 +533,8 @@
           avatar: "FG",
           title: "Fitgrit",
           badge: "Flutter",
-          details: "Find Fitness friends nearby with the same fitness interests. A free app to Match and Communicate with people nearby who have similar fitness interest.",
+          details:
+            "Find Fitness friends nearby with the same fitness interests. A free app to Match and Communicate with people nearby who have similar fitness interest.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Fitness / Social" },
@@ -974,7 +987,7 @@
             },
           ],
         },
-        
+
         {
           avatar: "KD",
           title: "Kanz Driver",
@@ -1042,7 +1055,8 @@
           avatar: "RSS",
           title: "Rss Malwa Prant",
           badge: "React Native",
-          details: "RSS Malwa Prant is a dedicated work reporting application designed for the seamless tracking and reporting of Shakha activities across Malwa Prant. With a large number of Shakhas running throughout the region and the increasing participation of Swayamsevaks.",
+          details:
+            "RSS Malwa Prant is a dedicated work reporting application designed for the seamless tracking and reporting of Shakha activities across Malwa Prant. With a large number of Shakhas running throughout the region and the increasing participation of Swayamsevaks.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Community" },
@@ -1096,6 +1110,27 @@
             },
             {
               url: "https://play.google.com/store/apps/details?id=com.console.billing",
+              text: "Copy Link",
+            },
+          ],
+        },
+        {
+          avatar: "BYP",
+          title: "Book Your Pandit",
+          badge: "React Native",
+          details:
+            "Book Your Pandit is a comprehensive platform designed to connect users with pandits for various religious and spiritual services. Whether youre planning a pooja, havan, or any other religious ceremony, our app makes it easier than ever to find the right pandit and book their services online.",
+          tags: [
+            { type: "Store", value: "Google Play" },
+            { type: "Type", value: "Services" },
+          ],
+          links: [
+            {
+              url: "https://play.google.com/store/apps/details?id=com.bookyourpandit.client&hl=en_IN&pli=1",
+              text: "View",
+            },
+            {
+              url: "https://play.google.com/store/apps/details?id=com.bookyourpandit.client&hl=en_IN&pli=1",
               text: "Copy Link",
             },
           ],
