--- a/ios-apps.html
+++ b/ios-apps.html
@@ -161,6 +161,7 @@
         <option value="">All Technologies</option>
         <option value="iOS">iOS</option>
         <option value="Flutter">Flutter</option>
+        <option value="React Native">React Native</option>
       </select>
       <select id="filter-type">
         <option value="">All Types</option>
@@ -504,7 +505,7 @@
           >
         </div>
       </div>
-      <!-- 11. RSS Malwa Prant -->
+      <!-- 13. Kanz Rider -->
       <div class="card">
         <div class="avatar">KR</div>
         <h3>Kanz Rider<span class="badge">Flutter</span></h3>
@@ -528,6 +529,35 @@
           <a
             class="btn"
             onclick="copyLink('https://apps.apple.com/us/app/kanz-rider/id6756484070')"
+            >Copy Link</a
+          >
+        </div>
+      </div>
+      <!-- 13. Book Your Pandit -->
+      <div class="card">
+        <div class="avatar">BYP</div>
+        <h3>Book Your Pandit<span class="badge">React Native</span></h3>
+        <p class="details">
+          Book Your Pandit" is a comprehensive platform designed to connect
+          users with pandits for various religious and spiritual services.
+          Whether you're planning a pooja, havan, or any other religious
+          ceremony, our app makes it easier than ever to find the right pandit
+          and book their services online.
+        </p>
+        <div class="tags">
+          <span class="tag">Store: App Store</span>
+          <span class="tag">Type: Services</span>
+        </div>
+        <div class="btn-group">
+          <a
+            class="btn"
+            href="https://apps.apple.com/vn/app/book-your-pandit/id6736895540?uo=2"
+            target="_blank"
+            >View</a
+          >
+          <a
+            class="btn"
+            onclick="copyLink('https://apps.apple.com/vn/app/book-your-pandit/id6736895540?uo=2')"
             >Copy Link</a
           >
         </div>
