ai generator video and apk file added

--- a/app-feature-demos.html
+++ b/app-feature-demos.html
@@ -422,7 +422,7 @@
       <div class="card">
         <div class="thumbnail">
           <img
-         src="https://drive.google.com/thumbnail?id=1JuvdCWxRQ0hNLQZhv7wSopZcnZ8Z-Tlv"
+            src="https://drive.google.com/thumbnail?id=1JuvdCWxRQ0hNLQZhv7wSopZcnZ8Z-Tlv"
             alt="Video 8 Thumbnail"
           />
         </div>
@@ -448,6 +448,38 @@
           <a
             class="btn"
             href="https://drive.google.com/file/d/1JuvdCWxRQ0hNLQZhv7wSopZcnZ8Z-Tlv/view"
+            target="_blank"
+            >Open</a
+          >
+        </div>
+      </div>
+      <div class="card">
+        <div class="thumbnail">
+          <img
+            src="https://drive.google.com/thumbnail?id=1BjVm-M-kAXp8FO8JDtm-D-fx1tqqjRbq"
+            alt="Video 9 Thumbnail"
+          />
+        </div>
+        <h3>AI Story Generator<span class="badge">Video</span></h3>
+        <p class="details">
+          Ai Story Generator is an innovative app that leverages artificial
+          intelligence to help users create captivating stories effortlessly.
+          Whether you're a writer seeking inspiration or someone who loves
+          storytelling, this app provides a seamless experience to generate
+          unique narratives based on your prompts.
+        </p>
+        <div class="tags">
+          <span class="tag">Type: Video</span>
+        </div>
+        <div class="btn-group">
+          <a
+            class="btn"
+            onclick="copyLink('https://drive.google.com/file/d/1BjVm-M-kAXp8FO8JDtm-D-fx1tqqjRbq/view?usp=sharing')"
+            >Copy Link</a
+          >
+          <a
+            class="btn"
+            href="https://drive.google.com/file/d/1BjVm-M-kAXp8FO8JDtm-D-fx1tqqjRbq/view?usp=sharing"
             target="_blank"
             >Open</a
           >
